# rust_cms

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs  tests.rs
examples/basic/templates/: base.html.tera  login.html.tera
rust_cms_derive_macros/: Cargo.toml
rust_cms_derive_macros/src/: lib.rs
src/: api.rs  lib.rs  macros.rs  model.rs  models.rs  schema.rs
src/pages/: login.rs
tests/: macros.rs
