[package]
name = "rust_cms"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[workspace]
members = [
    "rust_cms_derive_macros",
    "examples/*",
]

[dependencies]
rocket = "0.5.0-rc.2"
rocket_auth = "0.4.0"
rust_cms_derive_macros = { path = "rust_cms_derive_macros" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
casey = "0.3"
ron = "0.8"
